{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 1,
  "lineage": "9331c562-749b-b987-1456-f836c31ea8fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01b14b7ad41e17ba4",
            "arn": "arn:aws:ec2:us-east-1:780647029325:instance/i-0714b0f8cb1c2ef8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0714b0f8cb1c2ef8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07acd32da44201d01"
              }
            ],
            "primary_network_interface_id": "eni-07acd32da44201d01",
            "private_dns": "ip-10-10-0-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.102",
            "public_ip": "54.89.220.161",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IAC": "Terraform",
                  "IAC Versión": "1.14.8",
                  "Owner": "Ronaldo Jaramillo",
                  "cloud": "AWS",
                  "env": "dev",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "tags_all": {
                  "IAC": "Terraform",
                  "IAC Versión": "1.14.8",
                  "Owner": "Ronaldo Jaramillo",
                  "cloud": "AWS",
                  "env": "dev",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-001efa1fbf20aa748",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a525e520315b6494",
            "tags": {
              "Name": "apache-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "apache-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092697e27b403da5c"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780647029325",
            "id": "i-0714b0f8cb1c2ef8d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780647029325:internet-gateway/igw-05603a28e6ee0a0a9",
            "id": "igw-05603a28e6ee0a0a9",
            "owner_id": "780647029325",
            "region": "us-east-1",
            "tags": {
              "Name": "igw vpc virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "igw vpc virginia-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-03c9e0fdcbdb72548"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780647029325:route-table/rtb-0ee6811bd8e8c132f",
            "id": "rtb-0ee6811bd8e8c132f",
            "owner_id": "780647029325",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05603a28e6ee0a0a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubic crt-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "pubic crt-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c9e0fdcbdb72548"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780647029325",
            "id": "rtb-0ee6811bd8e8c132f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d795f35ab168a79",
            "region": "us-east-1",
            "route_table_id": "rtb-0ee6811bd8e8c132f",
            "subnet_id": "subnet-0a525e520315b6494"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780647029325:security-group/sg-092697e27b403da5c",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Over Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092697e27b403da5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Public Instance",
            "name_prefix": "",
            "owner_id": "780647029325",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "Public Instance-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c9e0fdcbdb72548"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780647029325",
            "id": "sg-092697e27b403da5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780647029325:subnet/subnet-0306cda72a18f1bf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0306cda72a18f1bf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "780647029325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "private_subnet-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-03c9e0fdcbdb72548"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780647029325",
            "id": "subnet-0306cda72a18f1bf3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780647029325:subnet/subnet-0a525e520315b6494",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a525e520315b6494",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "780647029325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "public_subnet-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-03c9e0fdcbdb72548"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780647029325",
            "id": "subnet-0a525e520315b6494",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:780647029325:vpc/vpc-03c9e0fdcbdb72548",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b91b5904ef8a76a8",
            "default_route_table_id": "rtb-02c8bf0ba49610f57",
            "default_security_group_id": "sg-0831f4a3728a4ac94",
            "dhcp_options_id": "dopt-068e6c35a87de3e75",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c9e0fdcbdb72548",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c8bf0ba49610f57",
            "owner_id": "780647029325",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc_virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC Versión": "1.14.8",
              "Name": "vpc_virginia-cerberus-dev-virginia",
              "Owner": "Ronaldo Jaramillo",
              "cloud": "AWS",
              "env": "dev",
              "project": "cerberus",
              "region": "virginia"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "780647029325",
            "id": "vpc-03c9e0fdcbdb72548",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}